--- a/calculadora.html
+++ b/calculadora.html
@@ -1,4 +1,15 @@
 <html>
+<!--
+==========================================
+== eXpCalc                              ==
+== Placar e Calculadora do              ==
+== jogo eXploradores                    ==
+== MÓDULO: calculadora.html (principal) ==
+== Mostra o Placar para 8 jogadores     ==
+== Author: Roberto Wollen               ==
+== Data 02/03/2024                      ==
+==========================================
+-->
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>eXp Calc - Formulário de Totalização</title>
