--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+<!--
+==========================================
+== eXpCalc                              ==
+== Menu principal do site:              ==
+== www.jogoexploradores.com.br          ==
+== MÓDULO: index.html (agregador)       ==
+== Author: Roberto Wollen               ==
+== Data 02/07/2024                      ==
+==========================================
+-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
